Added the streams endpoint in api doc
